openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speech-recorder
  labels:
    app: speech-recorder
spec:
  selector:
    app: speech-recorder
  ports:
    - name: http
      port: 80
      targetPort: http
